# cch-fastapi-boilerplate

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
api/: main.py
app/: main.py
app/core/: config.py
app/core/middlewares/: authentication.py
app/db/: base.py  connection.py
app/db/migrations/: env.py
app/db/repositories/: base.py  users.py
app/models/: common.py
app/models/domain/: users.py
app/models/schemas/: user.py
app/resources/: strings.py
complete-traefik/: README.md  docker-compose.yml  traefik-basic.yml  traefik.yml
ds-template/: pyproject.toml
ds-template/app/: main.py
ds-template/app/routers/: user.py
