[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["cch0807 <ckdgus11021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
