[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "mega docker-swarm template"
authors = ["cch0807 <ckdgus11021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
